migrate to consulo 3 api